welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:27: error: not found: value faire
  for (j <- 1 to 9 ) { faire Motif()}
                       ^